# try-fastapi-ddd-projs

user_manager/: .gitignore  README.md  pyproject.toml
user_manager/app/api/: deps.py  main.py
user_manager/app/api/presenters/: user.py
user_manager/app/api/routes/: users.py
user_manager/app/api/schemas/: user.py
user_manager/app/domain/: repository.py  user.py
user_manager/app/infra/: memory_user_repository.py
user_manager/app/usecase/: user.py
user_manager/tests/: test_user_usecase.py
