[project]
name = "user-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "pyright>=1.1.407",
]

[tool.ruff]
target-version = "py313"

[tool.pyright]
pythonVersion = "3.13"
include = ["app", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["."]